--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
 	<link href="style.css" rel="stylesheet">
 	<script type="text/javascript" src="httpClient.js"></script>
 	<script type="text/javascript" src="redditApp.js"></script>
+
+	<script src="./jquery.min.js"></script>
+	<script src="./RedditComments.js"></script>
+	<link rel="stylesheet" type="text/css" href="CommentStyle.css">
 </head>
 
 <body>
 <div id="posts"></div>
+<div id="comments"></div>
 </body>
 
 </html>
