--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="style.css" rel="stylesheet">
 	<script type="text/javascript" src="httpClient.js"></script>
 	<script type="text/javascript" src="redditApp.js"></script>
